@@ -24,6 +24,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5016: FileIO.seekable() could return False if the file position
+  was negative when truncated to a C int. Patch by Victor Stinner.
+
 - Issue #5179: Fixed subprocess handle leak on failure on windows.
 
 - Issue #5282: Fixed mmap resize on 32bit windows and unix. When offset > 0,
